--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -1,5 +1,14 @@
 <html>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+  <head>
+    <title>A-Wiki</title>
+    <meta property="og:title" content="A-Wiki">
+    <meta property="og:site_name" content="">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="This is a fresh-install of A-Wiki.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="">
+  </head>
   <body>
     <div id="wiki">
       <div class="jumbotron">
