A-Wiki becomes Anti-Airborne
Includes changes such as the location of the articles folder and addition of a config.json file.

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -23,5 +23,9 @@
       <% } %>
     </div>
     </div>
+    <footer>
+      <p class="text-center text-muted">If your question was not answered, please contact us!</p>
+      <p class="text-center text-muted">&copy; <b>(Group) 2022</b></p>
+    </footer>
   </body>
 </html>
