Updated entry point and linked documentation

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
   <head>
     <title>A-Wiki</title>
-    <meta property="og:title" content="A-Wiki">
+    <meta property="og:title" content="Anti-Airborne">
     <meta property="og:site_name" content="">
     <meta property="og:url" content="">
     <meta property="og:description" content="This is a fresh-install of A-Wiki.">
