--- a/views/article.ejs
+++ b/views/article.ejs
@@ -10,6 +10,7 @@
     <meta property="og:description" content="<%= description %>">
     <meta property="og:type" content="article">
     <meta property="og:image" content="">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   </head>
   <body>
 	<div class="titlebar">
@@ -29,7 +30,7 @@
     </div>
   </body>
   <footer>
-    <p class="text-center text-muted">&copy; <b>(Group) 2022</b></p>
+    <p class="text-center text-muted">&copy; <b>Aerial Laptop 2022</b></p>
   </footer>
 	<style>
 	.button {
