--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,13 +22,15 @@
       <hr>
       <h2 align="center">Knowledgebase articles are listed below...</h2>
       <br>
-    <% for (post of posts) { %>
-      <a href="/<%= post.slice(0, -3) %>">
-        <div class="post">
-          <button class="button"><%= post.replace(/.md|-/g, ' '); %></button>
-        </div>
-      </a>
-    <% } %>
+      <div class="button-container">
+      <% for (bundle of bundles) { %>
+        <a href="/<%= bundle[0].slice(0, -3) %>">
+          <div class="post">
+            <button class="button"><h3><%= bundle[1] %></h3><hr><h5><i><%= bundle[2] %></i></h5></button>
+          </div>
+        </a>
+      <% } %>
+      </div>
   </div>
   </div>
   <div class="jumbotron">
@@ -52,29 +54,36 @@
   </footer>
 </body>
 <style>
-.button {
-  background-color: #008CBA; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-} 
-.titlebar {
-  overflow: hidden;
-  background-color: #333;
-}
-.titlebar a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 24px;
-}
+  .button {
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 33%;
+    height: 250;
+    float: left;
+  } 
+  .titlebar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  .titlebar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 24px;
+  }
+  
+  .button-container {
+      width: 100%;
+      overflow-y: auto;
+  }
   </style>
 </html>
